WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292685
Sticky elements that are not currently sticking should not get OverlayRegions
https://bugs.webkit.org/show_bug.cgi?id=292685
Summary
Sticky elements that are not currently sticking should not get OverlayRegions
Etienne
Reported
2025-05-07 15:01:41 PDT
Sticky elements that are not currently sticking should not get OverlayRegions
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2025-05-07 15:26:54 PDT
<
rdar://problem/141296473
>
Etienne
Comment 2
2025-05-07 15:27:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45081
EWS
Comment 3
2025-05-09 01:12:48 PDT
Committed
294701@main
(9db84d0aa739): <
https://commits.webkit.org/294701@main
> Reviewed commits have been landed. Closing PR #45081 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug